--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.electron.app
-productName: electron-wallpaper
+appId: top.xlcoder.app
+productName: xlcoder-wallpaper
 directories:
   buildResources: build
 files:
@@ -12,7 +12,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  executableName: electron-wallpaper
+  executableName: xlcoder-wallpaper
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
