--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "electron-wallpaper",
+  "name": "xlcoder-wallpaper",
   "version": "1.0.0",
-  "description": "An Electron application with Vue and TypeScript",
+  "description": "小林不是coder的壁纸软件",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "xlcoder.top",
+  "homepage": "https://xlcoder.top",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
